Switched to new JSONL parser
The new parser is generated by Jison (a JS parser generator, like
Bison).
-- Modified one of the Jison samples to support our "leniency"
requirement.
-- Added a makefile to build & minify the parser.
-- The new parser also generates better error messages... but they
expect to be displayed in a console.  So I changed the error alert DIV
to use a fixed-width font.

--- a/kb.html
+++ b/kb.html
@@ -19,6 +19,7 @@ All rights reserved.
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/urlon.js"></script>
 <script type="text/javascript" src="js/md5.js"></script>
+<script type="text/javascript" src="js/jsonl.min.js"></script>
 <script type="text/javascript" src="kb.js"></script>
 </head>
 <body ng-controller="kbCtrl"
@@ -264,7 +265,7 @@ All rights reserved.
 		<!-- RAW DATA EDITOR -->
 		<div ng-class="{hidden:selTab!=2}" class="col-md-12">
 			<textarea id="rawdata" spellcheck="false" ng-model="serialized" ng-change="updateFromSerialized()" ng-class="{error:deserializeException!==''}"></textarea>
-			<div class="alert alert-danger" style='margin-top:1em;margin-bottom:0px' ng-class="{hidden:!deserializeException}">{{deserializeException}}</div>
+			<div id="rawdata-error" class="alert alert-danger" style='margin-top:1em;margin-bottom:0px' ng-class="{hidden:!deserializeException}">{{deserializeException}}</div>
 		</div>
 	</div>	
 	<P></P>
