Prevent '?' from popping the help dialog on INPUT fields.

--- a/kb.html
+++ b/kb.html
@@ -25,7 +25,7 @@ All rights reserved.
 <body ng-controller="kbCtrl"
 	 ng-mouseup="selectRelease($event)" 
 	 ng-mousemove="selectMove($event)"
-	 ui-keydown="{'shift-191' : 'showHelp()',
+	 ui-keydown="{'shift-191' : 'showHelp($event)',
 	 			  'ctrl-83' : 'save($event)' }">
 <div id="wrap">
 <nav class="navbar navbar-inverse navbar-static-top" role="navigation">	
