--- a/kb.html
+++ b/kb.html
@@ -331,9 +331,9 @@ All rights reserved.
 		All rights reserved.
 	</p>
 	<div style="float:right; text-alignment:right;">
-		<a href="#" ng-click="showHelp()"><i class="icon-keyboard"></i> Keyboard shortcuts available</a><br/>
-		<br/>
-		<a href="https://github.com/ijprest/keyboard-layout-editor" target="_blank"><i class="icon-github"></i> Code hosted on GitHub</a>
+		<a href="#" ng-click="showHelp($event)"><i class="icon-keyboard"></i> Keyboard shortcuts available</a><br/>
+		<a href="https://github.com/ijprest/keyboard-layout-editor/issues" target="_blank"><i class="icon-bug"></i> Found a bug?</a><br/>
+		<a href="https://github.com/ijprest/keyboard-layout-editor" target="_blank"><i class="icon-github"></i> Code hosted on GitHub</a><br/>
 	</div>
 </div>
 </div>	
