--- a/kb.html
+++ b/kb.html
@@ -21,6 +21,7 @@ All rights reserved.
 <script type="text/javascript" src="js/md5.js"></script>
 <script type="text/javascript" src="js/jsonl.min.js"></script>
 <script type="text/javascript" src="js/color.js"></script>
+<script type="text/javascript" src="render.js"></script>
 <script type="text/javascript" src="kb.js"></script>
 </head>
 <body ng-controller="kbCtrl"
