--- a/kb.html
+++ b/kb.html
@@ -21,7 +21,9 @@ All rights reserved.
 <script type="text/javascript" src="js/md5.js"></script>
 <script type="text/javascript" src="js/jsonl.min.js"></script>
 <script type="text/javascript" src="js/color.js"></script>
+<script type="text/javascript" src="extensions.js"></script>
 <script type="text/javascript" src="render.js"></script>
+<script type="text/javascript" src="serial.js"></script>
 <script type="text/javascript" src="kb.js"></script>
 </head>
 <body ng-controller="kbCtrl"
